--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: DINAR
-          repository: itpp-labs/DINAR-fork
+          repository: itpp-labs/DINAR
           ref: master
       - uses: actions/setup-python@v1
         with:
@@ -65,51 +65,19 @@ jobs:
           # sets environment variables that available in next steps via $ {{ env.PR_... }} notation
           cd REPO
           python ../DINAR/workflow-files/analyze-modules.py updated ${{ secrets.GITHUB_TOKEN }} ${{ github.repository }} ${{ github.event.number }}
-      - name: HOW TO RUN LOCALLY
-        #if: "env.PR_MODULES != ''"
+      - name: Configure docker
         run: |
-          cat << 'EOF'
-          To test updates run:
-
-              WORKDIR=/tmp/DINAR/${{ github.repository }}-${{ github.event.number }}/
-              mkdir -p $WORKDIR
-              cd $WORKDIR
-              # TODO use fixed version instead of master
-              curl https://raw.githubusercontent.com/itpp-labs/DINAR/master/local-files/docker-compose.yml > docker-compose.yml
-              export REGISTRY=docker.pkg.github.com REPOSITORY=${{ github.repository }} REPO_NAME=$(echo ${{ github.repository }} | sed "s;.*/;;") VERSION=${{ github.event.pull_request.base.ref }}
-              git clone --depth=1 --branch $VERSION git@github.com:${{ github.repository }} pr-files
-              # Version in PR
-              REVISION=${{ github.event.pull_request.head.sha}}
-              # Version after merging
-              REVISION=pull/${{ github.event.number}}/merge
-              git -C pr-files fetch origin $REVISION
-              git -C pr-files checkout FETCH_HEAD
-              docker-compose pull
-              export MODULES=${{ env.PR_MODULES }}
-              export LOAD_MODULES=${{ env.PR_MODULES_LOAD }}
-          EOF
-
-          if [ "${{ github.event.pull_request.base.ref }}" == "10.0" ]; then
-          cat << 'EOF'
-
-              # workaround for odoo 10.0
-              docker-compose up -d odoo
-              docker-compose exec odoo click-odoo -i
-              # EXEC:
-              # env['ir.module.module'].update_list()
-              # env.cr.commit()
-              # exit()
-              docker-compose stop odoo
-
-          EOF
-
-          fi
-
-          cat << 'EOF'
-              docker-compose up
-          EOF
-          # TODO: post this message when Github guys make access to post message in PR
-          #> Sent by [DINAR :construction_worker_man:](https://github.com/itpp-labs/DINAR) via `.github/workflows/DINAR-pr.yml`
+          bash DINAR/workflow-files/configure-docker.sh ${{ secrets.DINAR_TOKEN || secrets.GITHUB_TOKEN }}
+      - name: HOW TO RUN ODOO LOCALLY
+        if: always()
+        run: |
+          export MODULES=${{ env.PR_MODULES }}
+          export LOAD_MODULES=${{ env.PR_MODULES_LOAD }}
+          export PR_NUM=${{ github.event.number }}
+          export VERSION=${{ github.event.pull_request.base.ref }}
+          export REVISION_PR=${{ github.event.pull_request.head.sha}}
+          export DINAR_REPO="itpp-labs/DINAR"
+          bash DINAR/workflow-files/how-to-run-locally.sh
       - name: Check Python Version
         run:
           echo "::set-env name=PY::$(python --version --version | sha256sum | cut -d' '
@@ -139,7 +107,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: DINAR
-          repository: itpp-labs/DINAR-fork
+          repository: itpp-labs/DINAR
           ref: master
       - name: Configure docker
         run: |
@@ -220,7 +188,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: DINAR
-          repository: itpp-labs/DINAR-fork
+          repository: itpp-labs/DINAR
           ref: master
       - name: Install python tools
         run: |
@@ -261,3 +229,28 @@ jobs:
           export ODOO_EXTRA_ARG=--test-enable
           docker-compose -p DINAR -f DINAR/workflow-files/docker-compose-DINAR-pr.yml config
           docker-compose -p DINAR -f DINAR/workflow-files/docker-compose-DINAR-pr.yml up --abort-on-container-exit
+      - name: HOW TO RUN TESTS LOCALLY
+        if: always()
+        # TODO make similar for Quick Tests
+        run: |
+          export MODULES=${{ env.ALL_MODULES }}
+          export LOAD_MODULES=${{ env.ALL_MODULES_LOAD }}
+          export PR_NUM=${{ github.event.number }}
+          export VERSION=${{ github.event.pull_request.base.ref }}
+          export REVISION_PR=${{ github.event.pull_request.head.sha}}
+          export DINAR_REPO="itpp-labs/DINAR"
+          bash DINAR/workflow-files/how-to-run-locally.sh
+
+          # TODO move to how-to-run-locally.sh
+          if [ "$ARTIFACT" != "empty" ]; then
+
+              # download artifact
+              echo $GITHUB_RUN_ID
+              # TODO
+              # unpack artifact
+              # TODO
+              # download script
+              curl https://raw.githubusercontent.com/itpp-labs/DINAR/workflow-files/load-docker-layers.sh > load-docker-layers.sh
+              # apply script
+              # TODO
+          fi
