upload updates from DINAR

--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Configure docker
         run: |
           bash DINAR/workflow-files/configure-docker.sh ${{ secrets.DINAR_TOKEN || secrets.GITHUB_TOKEN }}
+          echo "::set-env name=PR_FILES::../../REPO"
       - name: HOW TO RUN ODOO LOCALLY
         if: always()
         run: |
@@ -112,6 +113,7 @@ jobs:
       - name: Configure docker
         run: |
           bash DINAR/workflow-files/configure-docker.sh ${{ secrets.DINAR_TOKEN || secrets.GITHUB_TOKEN }}
+          echo "::set-env name=PR_FILES::../../REPO"
       - name: Install python tools
         run: |
           pip install plumbum PyGithub pyyaml
