--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -177,9 +177,10 @@ jobs:
     name: Integration Tests
     # Let Quick Review/Tests run first
     # This job uses artifacts from "Quick Tests"
-    needs:
-      - tests
-      - review
+    # TMP
+    #needs:
+    #  - tests
+    #  - review
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -232,6 +233,9 @@ jobs:
           export ODOO_EXTRA_ARG=--test-enable
           docker-compose -p DINAR -f DINAR/workflow-files/docker-compose-DINAR-pr.yml config
           docker-compose -p DINAR -f DINAR/workflow-files/docker-compose-DINAR-pr.yml up --abort-on-container-exit
+      - name: Install json parser
+        run: |
+          sudo apt-get install jq
       - name: HOW TO RUN TESTS LOCALLY
         if: always()
         # TODO make similar for Quick Tests
@@ -248,13 +252,38 @@ jobs:
           # TODO move to how-to-run-locally.sh
           if [ "$ARTIFACT" != "empty" ]; then
 
-              # download artifact
-              echo $GITHUB_RUN_ID
-              # TODO
-              # unpack artifact
-              # TODO
-              # download script
-              curl https://raw.githubusercontent.com/itpp-labs/DINAR/workflow-files/load-docker-layers.sh > load-docker-layers.sh
-              # apply script
-              # TODO
+              # get artifact URL
+              ARTIFACT_URL=$(curl -s "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts" -H "Authorization: token $GITHUB_TOKEN" | \
+              jq -r '.artifacts[] | select(.name == "new-deps) | .archive_download_url')
+
+
+              cat << EOF
+
+    # Once per device add authentication:
+    USERNAME=YOUR_USERNAME_HERE
+    PASSWORD=YOUR_TOKEN_HERE # see https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
+    cat <<- EOOF > $HOME/.netrc
+        machine api.github.com
+        login $USERNAME
+        password $PASSWORD
+
+    EOOF    
+    # Check the authentication with following comman:
+    curl --netrc https://api.github.com/user
+
+
+    # download artifact
+    curl --location --netrc $ARTIFACT_URL > new-deps.zip
+    # unpack
+    mkdir new-deps
+    unzip new-deps.zip  -d new-deps
+    # download script
+    DINAR_REPO="itpp-labs/DINAR"
+    curl https://raw.githubusercontent.com/$DINAR_REPO/workflow-files/load-docker-layers.sh > load-docker-layers.sh
+    # apply script
+    export PROJECT_NAME=$(basename $(pwd))
+    bash load-docker-layers.sh new-deps/
+
+              EOF
+
           fi
