--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -178,9 +178,9 @@ jobs:
     # Let Quick Review/Tests run first
     # This job uses artifacts from "Quick Tests"
     # TMP
-    #needs:
-    #  - tests
-    #  - review
+    needs:
+      - tests
+      - review
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -267,7 +267,7 @@ jobs:
               export PROJECT_NAME=$(basename $(pwd))
               bash load-docker-layers.sh new-deps/
 
-              EOF
+         EOF
 
           fi
       - name: Download base images
