--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -236,8 +236,12 @@ jobs:
           if [ "$ARTIFACT" != "empty" ]; then
 
               # get artifact URL
-              ARTIFACT_URL=$(curl -s "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts" -H "Authorization: token $GITHUB_TOKEN" | \
-              jq -r '.artifacts[] | select(.name == "new-deps") | .archive_download_url')
+              API_URL="https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts"
+              echo $API_URL
+              API_RESPONSE=$(curl -s $API_URL -H "Authorization: token $GITHUB_TOKEN)
+              echo "$API_RESPONSE"
+              ARTIFACT_URL=$(echo $API_RESPONSE | \
+              jq --raw-output '.artifacts[] | select(.name == "new-deps") | .archive_download_url')
 
 
               cat << EOF
