move script to how-to-run-locally.sh

--- a/.github/workflows/DINAR-pr.yml
+++ b/.github/workflows/DINAR-pr.yml
@@ -230,50 +230,7 @@ jobs:
           export REVISION_PR=${{ github.event.pull_request.head.sha}}
           export DINAR_REPO="itpp-labs/DINAR"
           export ODOO_EXTRA_ARG=--test-enable
-          bash DINAR/workflow-files/how-to-run-locally.sh
-
-          # TODO move to how-to-run-locally.sh
-          if [ "$ARTIFACT" != "empty" ]; then
-
-              # get artifact URL
-              API_URL="https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts"
-              echo "API_URL=$API_URL"
-              API_RESPONSE=$(curl -s $API_URL -H "Authorization: token $GITHUB_TOKEN")
-              echo "$API_RESPONSE"
-              ARTIFACT_URL=$(echo $API_RESPONSE | \
-              jq --raw-output '.artifacts[] | select(.name == "new-deps") | .archive_download_url')
-
-
-              cat << EOF
-
-              # Once per device add authentication:
-              USERNAME=YOUR_USERNAME_HERE
-              PASSWORD=YOUR_TOKEN_HERE # see https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
-              cat <<- EOOF > $HOME/.netrc
-                  machine api.github.com
-                  login $USERNAME
-                  password $PASSWORD
-
-              EOOF
-              # Check the authentication with following comman:
-              curl --netrc https://api.github.com/user
-
-
-              # download artifact
-              curl --location --netrc $ARTIFACT_URL > new-deps.zip
-              # unpack
-              mkdir new-deps
-              unzip new-deps.zip  -d new-deps
-              # download script
-              DINAR_REPO="itpp-labs/DINAR"
-              curl https://raw.githubusercontent.com/$DINAR_REPO/workflow-files/load-docker-layers.sh > load-docker-layers.sh
-              # apply script
-              export PROJECT_NAME=$(basename $(pwd))
-              bash load-docker-layers.sh new-deps/
-
-          EOF
-
-          fi
+          bash DINAR/workflow-files/how-to-run-locally.sh ${{ secrets.GITHUB_TOKEN }}
       - name: Download base images
         run: |
           docker-compose -p DINAR -f DINAR/workflow-files/docker-compose-DINAR-pr.yml config
