--- a/.github/workflows/DINAR-readme.yml
+++ b/.github/workflows/DINAR-readme.yml
@@ -44,13 +44,13 @@ jobs:
           python-version: "3.7.x"
       - name: Install python tools
         run: |
-          pip install plumbum pyyaml
+          pip install plumbum pyyaml PyGithub
       - name: Generate readme
         run: |
           REF=${GITHUB_BASE_REF:-${GITHUB_REF}}
           BRANCH=${REF##*/}
           cd REPO
-          python ../DINAR/workflow-files/generate-repo-readme.py $BRANCH "${{ github.repository.description }}"
+          python ../DINAR/workflow-files/generate-repo-readme.py $BRANCH "${{ github.repository }}"
       - name: Commit updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
